--- a/crates/world/node/Cargo.toml
+++ b/crates/world/node/Cargo.toml
@@ -31,8 +31,8 @@ reth-optimism-primitives.workspace = true
 reth-optimism-storage.workspace = true
 reth-optimism-payload-builder.workspace = true
 reth-optimism-rpc.workspace = true
+reth-primitives-traits = { workspace = true, optional = true  }
 reth-primitives.workspace = true
-reth-primitives-traits.workspace = true
 reth-tracing = { workspace = true, optional = true }
 reth-optimism-forks.workspace = true
 reth-rpc-engine-api.workspace = true
@@ -40,29 +40,27 @@ reth-provider.workspace = true
 reth-prune-types = { workspace = true, optional = true }
 reth-trie = { workspace = true, optional = true }
 reth-trie-db.workspace = true
-reth-basic-payload-builder.workspace = true
 reth-transaction-pool.workspace = true
 reth-e2e-test-utils = { workspace = true, optional = true }
 reth-node-api.workspace = true
+
 alloy-eips = { workspace = true, optional = true }
 alloy-primitives.workspace = true
-alloy-rpc-types.workspace = true
-alloy-rpc-types-engine.workspace = true
-alloy-sol-types = { workspace = true, optional = true }
-revm-primitives = { workspace = true, optional = true }
-op-alloy-consensus.workspace = true
 alloy-rpc-types-eth.workspace = true
+alloy-rpc-types.workspace = true
+alloy-sol-types = { workspace = true, optional = true }
+
 op-alloy-rpc-types-engine.workspace = true
+op-alloy-consensus.workspace = true
+
+revm-primitives = { workspace = true, optional = true }
+
 tokio = { workspace = true }
 eyre.workspace = true
 futures = { workspace = true, optional = true }
 clap.workspace = true
 chrono = { workspace = true, optional = true }
 tracing.workspace = true
-parking_lot.workspace = true
-alloy-consensus.workspace = true
-reth-optimism-consensus.workspace = true
-serde.workspace = true
 
 [dev-dependencies]
 world-chain-builder-pbh.workspace = true
@@ -75,11 +73,15 @@ reth-node-core.workspace = true
 reth-optimism-consensus.workspace = true
 reth-optimism-evm.workspace = true
 revm-primitives.workspace = true
+reth-basic-payload-builder.workspace = true
+reth-primitives.workspace = true
 
 alloy-genesis.workspace = true
 alloy-network.workspace = true
 alloy-signer-local.workspace = true
 alloy-eips.workspace = true
+alloy-rpc-types-engine.workspace = true
+alloy-consensus.workspace = true
 
 tokio-tungstenite.workspace = true
 tokio-util.workspace = true
@@ -89,6 +91,8 @@ serde_json.workspace = true
 chrono.workspace = true
 tower.workspace = true
 jsonrpsee.workspace = true
+parking_lot.workspace = true
+serde.workspace = true
 
 [features]
 default = []
@@ -98,6 +102,7 @@ test = [
     "dep:reth-e2e-test-utils",
     "dep:reth-chain-state",
     "dep:reth-tracing",
+    "dep:reth-primitives-traits",
     "dep:reth-prune-types",
     "dep:reth-trie",
     "dep:reth-db",
