--- a/crates/world/bin/Cargo.toml
+++ b/crates/world/bin/Cargo.toml
@@ -33,10 +33,8 @@ reth-node-builder.workspace = true
 reth-tracing.workspace = true
 reth-provider.workspace = true
 reth-transaction-pool.workspace = true
-
 reth-evm.workspace = true
 reth-revm = { workspace = true, features = ["std"] }
-
 reth-trie-db.workspace = true
 reth-rpc-server-types.workspace = true
 reth-tasks = { workspace = true, optional = true }
@@ -50,6 +48,7 @@ reth-optimism-chainspec.workspace = true
 reth-optimism-consensus.workspace = true
 reth-optimism-forks.workspace = true
 reth-optimism-primitives = { workspace = true, features = ["serde"] }
+reth-optimism-node.workspace = true
 
 # revm 
 revm.workspace = true
