--- a/crates/world/node/Cargo.toml
+++ b/crates/world/node/Cargo.toml
@@ -24,6 +24,7 @@ reth.workspace = true
 reth-chain-state = { workspace = true, optional = true }
 reth-db = { workspace = true, optional = true }
 reth-node-builder.workspace = true
+reth-evm.workspace = true
 reth-engine-local.workspace = true
 reth-optimism-chainspec.workspace = true
 reth-optimism-node = { workspace = true, features = ["test-utils"] }
@@ -31,6 +32,7 @@ reth-optimism-primitives.workspace = true
 reth-optimism-storage.workspace = true
 reth-optimism-payload-builder.workspace = true
 reth-optimism-rpc.workspace = true
+reth-optimism-evm.workspace = true
 reth-primitives-traits = { workspace = true, optional = true  }
 reth-primitives.workspace = true
 reth-tracing = { workspace = true, optional = true }
@@ -53,6 +55,7 @@ alloy-sol-types = { workspace = true, optional = true }
 
 op-alloy-rpc-types-engine.workspace = true
 op-alloy-consensus.workspace = true
+op-alloy-network.workspace = true
 
 revm-primitives = { workspace = true, optional = true }
 
@@ -69,10 +72,8 @@ world-chain-builder-rpc.workspace = true
 world-chain-builder-pool = { workspace = true, features = ["test"] }
 
 reth-e2e-test-utils.workspace = true
-reth-evm.workspace = true
 reth-node-core.workspace = true
 reth-optimism-consensus.workspace = true
-reth-optimism-evm.workspace = true
 revm-primitives.workspace = true
 reth-basic-payload-builder.workspace = true
 reth-primitives.workspace = true
