--- a/crates/world/node/Cargo.toml
+++ b/crates/world/node/Cargo.toml
@@ -35,7 +35,7 @@ reth-optimism-rpc.workspace = true
 reth-optimism-evm.workspace = true
 reth-primitives-traits = { workspace = true, optional = true  }
 reth-primitives.workspace = true
-reth-tracing = { workspace = true, optional = true }
+reth-tracing.workspace = true
 reth-optimism-forks.workspace = true
 reth-rpc-engine-api.workspace = true
 reth-provider.workspace = true
@@ -65,12 +65,16 @@ futures = { workspace = true, optional = true }
 clap.workspace = true
 chrono = { workspace = true, optional = true }
 tracing.workspace = true
+rand.workspace = true
 
 [dev-dependencies]
 world-chain-builder-pbh.workspace = true
 world-chain-builder-rpc.workspace = true
 world-chain-builder-pool = { workspace = true, features = ["test"] }
+world-chain-builder-test-utils.workspace = true
+world-chain-builder-node = { workspace = true, features = ["test"] }
 
+reth-db.workspace = true
 reth-e2e-test-utils.workspace = true
 reth-node-core.workspace = true
 reth-optimism-consensus.workspace = true
@@ -103,7 +107,6 @@ test = [
     "world-chain-builder-pbh",
     "dep:reth-e2e-test-utils",
     "dep:reth-chain-state",
-    "dep:reth-tracing",
     "dep:reth-primitives-traits",
     "dep:reth-prune-types",
     "dep:reth-trie",
